fix: fix dataloader and fix val model

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,28 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python 调试程序: 当前文件",
+      "name": "run train",
       "type": "debugpy",
       "request": "launch",
       "program": "${file}",
-      "console": "integratedTerminal"
+      "console": "integratedTerminal",
+      "args": [
+        "--batch_size",
+        "2",
+      ]
+    },
+    {
+      "name": "run test",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal",
+      "args": [
+        "--batch_size",
+        "8",
+        "--name", 
+        "v100_train",
+      ]
     }
   ]
 }
